--- a/Menjadi Front-End Web Developer Expert/restaurant-catalogue/src/templates/index.html
+++ b/Menjadi Front-End Web Developer Expert/restaurant-catalogue/src/templates/index.html
@@ -15,6 +15,7 @@
         <title>Restaurant Catalogue</title>
       </head>
 <body>
+  <a href="#maincontent" class="skip-link">Menuju ke konten</a>
   <header class="app-bar">
     <div class="app-bar__menu">
       <button id="hamburgerButton">☰</button>
@@ -24,8 +25,9 @@
     </div>
     <nav id="navigationDrawer" class="app-bar__navigation">
       <ul>
-        <li><a href="#/list">List Of Restaurant</a></li>
+        <li id="maincontent"><a href="#/list">List Of Restaurant</a></li>
         <li><a href="#/like">Liked Restaurant</a></li>
+        <li><a href="https://stunggal.github.io/">About Me</a></li>
       </ul>
     </nav>
   </header>
